# soi

./: Cargo.toml  README.md  rust-soi.spec
src/: backend.rs  input.rs  main.rs  output.rs  playlist.rs  song.rs
src/traits/: arg_files.rs  audio_playbin.rs  mod.rs  mutex_unwrap.rs  path_contents.rs  path_to_uri.rs  pretty_duration.rs
testcases/: generate.sh
